; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/target/extr_fcloop.c___remoteport_unreg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/target/extr_fcloop.c___remoteport_unreg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fcloop_nport = type { i32 }
%struct.fcloop_rport = type { i32 }

@EALREADY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fcloop_nport*, %struct.fcloop_rport*)* @__remoteport_unreg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__remoteport_unreg(%struct.fcloop_nport* %0, %struct.fcloop_rport* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fcloop_nport*, align 8
  %5 = alloca %struct.fcloop_rport*, align 8
  store %struct.fcloop_nport* %0, %struct.fcloop_nport** %4, align 8
  store %struct.fcloop_rport* %1, %struct.fcloop_rport** %5, align 8
  %6 = load %struct.fcloop_rport*, %struct.fcloop_rport** %5, align 8
  %7 = icmp ne %struct.fcloop_rport* %6, null
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* @EALREADY, align 4
  %10 = sub nsw i32 0, %9
  store i32 %10, i32* %3, align 4
  br label %16

11:                                               ; preds = %2
  %12 = load %struct.fcloop_rport*, %struct.fcloop_rport** %5, align 8
  %13 = getelementptr inbounds %struct.fcloop_rport, %struct.fcloop_rport* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @nvme_fc_unregister_remoteport(i32 %14)
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %11, %8
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @nvme_fc_unregister_remoteport(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
